Gestiones y contenidos adicionales del pie de página.

--- a/acreditaciones.html
+++ b/acreditaciones.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Acreditación</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -788,40 +788,71 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
+                Sobre la <b>Acreditación</b>
               </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
               <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
-              </p>
-              <p>
-                  Se solicitarán los siguientes datos:
-              </p>
+                La evaluación y la acreditación no son una moda académica pasajera, sino que se están constituyendo en una herramienta indispensable de política, planificación y gestión universitaria, que tendrá permanencia debido al reconocimiento creciente de la necesidad de garantizar una efectiva calidad académica.<br>
+                La sociedad necesita disponer de elementos de juicio sobre la calidad de la educación superior. Aunque ha existido de hecho una acreditación social informal, ella no es suficiente para las condiciones actuales, es por eso que nuestra universidad mariano Gálvez, se encuentra inmersa en dichos procesos, quiere compartir con ustedes nuestros avances.
+              </p><br>
+              <h2>Principales beneficios de la Acreditación</h2>
               <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
-              <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
-              </p>
+                    <li>La retroalimentación y validación</li>
+                    <li>Constituye una garantía pública de mantener estándares de calidad a nivel internacional</li>
+                    <li>Seguridad de que los estudiantes egresarán de un programa de calidad</li>
+                    <li>Inicia el camino para que se abran más oportunidades laborales e intercambio académico</li>
+                    <li>La retroalimentación y validación</li>
+                    <li>Constituye una garantía pública de mantener estándares de calidad a nivel internacional</li>
+                    <li>Seguridad de que los estudiantes egresarán de un programa de calidad</li>
+                    <li>Inicia el camino para que se abran más oportunidades laborales e intercambio académico</li>
+                    <li>Intercambio internacional de Docentes</li>
+                    <li>Intercambio internacional de Estudiantes</li>
+                    <li>Homologación de títulos</li>
+                    <li>Fortalecimiento de las líneas de investigación</li>
+                    <li>Actualización Tecnológica</li>
+              </ul><br>
+              <h2>Unidades Acreditadas Internacionalmente</h2><br>
+                    <h3>Licenciatura en Administración de Empresas</h3>
+                <p>
+                    Agencia Acreditadora:<br>
+                    Consejo de Acreditación en Ciencias Administrativas, Contables y Afines<br>
+                    (<a target="_blank" href="http://caceca.org/">CACECA</a>)<br>
+                    País: México
+                </p><br>
+
+                <h3>Licenciatura en Mercadotecnia</h3>
+                <p> 
+                    Agencia Acreditadora:<br>
+                    Consejo de Acreditación en Ciencias Administrativas, Contables y Afines<br>
+                    (<a target="_blank" href="http://caceca.org/">CACECA</a>)<br>
+                    País: México
+                </p><br>
+
+                <h3>Licenciatura en Estomatología (Odontología)</h3>
+                <p> 
+                    Agencia Acreditadora:<br>
+                    Consejo Nacional de Educación Odontológica<br>
+                    (<a target="_blank" href="https://conaedo.org/">CONAEDO</a>)<br>
+                    País: México
+                </p><br>
+
+                <center>
+                  <img class="img-thumbnail" width="200" src="img/acreditacion/CACECA.png">
+                  <img class="img-thumbnail" width="200" src="img/acreditacion/CONAEDO.png">
+                  <img class="img-thumbnail" width="200" src="img/acreditacion/IIDEA.png">
+                  <img class="img-thumbnail" width="200" src="img/acreditacion/ANPADEH.png">
+                </center>
+
+          <h2>Contacto</h2>
+                <p>
+                  3a. Avenida 8-42 Interior Finca El Zapote, zona 2
+                <br>
+                  <a href="tel:24111800,1156" class="tel">PBX: 2411 1800 ext. 1156</a><br>
+                  <a href="mailto:flzea@umg.edu.gt" class="email">flzea@umg.edu.gt</a>
+                </p>
         </div>
       </article>
 
