--- a/asignacion-de-cursos.html
+++ b/asignacion-de-cursos.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Asignación de cursos</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,100 +789,27 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 Asignación <b>de cursos</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <blockquote class="p-3 bg-info text-secondary lh-base">
-                <p class="mb-0">
-                  Para poder asignarte por internet, es necesario que hagas tu <a href="inscripciones"> pago de inscripción aquí</a>.<br>
-                  Con tu boleta o número de documento, ya puedes realizar tu asignación.
-                </p>
-              </blockquote>
-              <h2>Pasos para asignarte</h2>
-              <p>
-                Paso 1 - <a href="https://apps.umg.edu.gt/inscripciones/login.php">Ingresa al sistema de asignación de cursos</a> y completa el formulario con tus datos e incluir el documento de pago. (En algunos casos deberás guardar turno).
-                <br>
-                <img src="#">
-              </p>
-              <h3>Documento de pago</h3>
-              <p>El documento de pago debe ser válido, si no te aparecerá un mensaje. Verifica correctamente el número de documento. También puedes consultar <a href="#"> Otros errores que podrían darse aquí</a>.<br>
-                <img src="#"></p>
+<ul>
+<li>Ingresa y completa el formulario: <a href="https://apps.umg.edu.gt/inscripciones">https://apps.umg.edu.gt/inscripciones</a></li>
+<li>"Semestre/Trimestre" Se refiere al Ciclo Académico del año actual.</li>
+<ol>
+  <li>Para Pregrados es 1 ó 2.</li>
+  <li>Posgrados puede llegar hasta 4.</li>
+</ol>
 
-              <p>
-                <b>Paso 2 - Datos de contacto:</b> se le solicita los datos de contacto. Todos los campos son obligatorios.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 3 - Antes de asignarse:</b> Instrucciones previas, importante que las leas.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4 - lista de cursos disponibles para asignación.</b>
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4.1 - Seleccionar sección:</b> en el cuadro de selección a la derecha puede seleccionar la sección, en el mismo cuadro aparece el horario del curso para cada sección.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4.2 - Error de traslape:</b> si hay traslape en algún horario, se le mostrará en la página.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4.3 - Cursos a asignar:</b> si no hay traslapes, los cursos seleccionados aparecen en azul.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4.4 - Confirmación previa a asignación:</b> luego de presionar el botón Asignar cursos (abajo) deberás confirmar la asignación.
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 4.5 - Si hay cupo lleno:</b> si hay error en la asignación, volverá a la página y se mostrará el error. Los tipos de error podrían ser:
-                <ul>
-                  <li>409 => 'ya inscrito'</li>
-                  <li>413 => 'sin arancel'</li>
-                  <li>423 => 'cupo lleno'</li>
-                  <li>424 => 'traslape'</li>
-                </ul>
-                <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 5 - Confirmación de asignación:</b> si la asignación fue un éxito se te muestra la página de confirmación.
-              <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 6 - DIRE de asignación:</b> al presionar el botón <b>Imprimir DIRE</b> se le muestra en una nueva pestaña el PDF del DIRE.
-              <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Paso 7 - Correo de confirmación:</b> también se le envía una copia de su asignación por correo electrónico.
-              <br>
-                <img src="#">
-              </p>
-              <p>
-                <b>Otros errores</b><br>
-                Otros errores que podrías encontrar son:
-                <ul>
-                  <li>204 => 'No existen cursos para este carnet'</li>
-                  <li>206 => 'Horarios no disponibles'</li>
-                  <li>402 => 'Documento de pago no existe'</li>
-                  <li>403 => 'Alumno ya inscrito'</li>
-                  <li>404 => 'Carnet no existe'</li>
-                  <li>408 => 'Fuera del rango de fechas'</li>
-                </ul>
-              </p>
+<li>"Número de Documento de Pago" se refiere al número de Formulario de pago, si tu pago fue en línea, el número identificado será: "Referencia UMG".</li>
+<li>Selecciona según el ciclo académico al que corresponda los cursos y horarios de tu interés.</li>
+<li>Al finalizar se generará un documento PDF que podrás guardar o imprimir, de igual manera se te enviará de manera automática al correo electrónico que hayas ingresado antes de finalizar el proceso.</li>
+
+
+</ul>
+            
+
         </div>
       </article>
 
