--- a/biblioteca.html
+++ b/biblioteca.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Biblioteca</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,8 +788,8 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Biblioteca</b>
-              </h1>
+                Biblioteca
+              </h1><br><br>
             </div>
           </div>
           <div class="row">
@@ -802,15 +802,15 @@
                 <li>
                   Una instancia organizada administrativamente con personal capacitado para servir con recursos bibliográficos a los estudiantes en su formación académica.
                 </li>
-              </ul>
+              </ul><br>
               <h2>Misión</h2>
               <p>
                 Somos gestores de recursos de información científi ca, técnica y cultural, llevando a cabo la difusión del conocimiento, contribuyendo de esta manera a la consecución de los objetivos académicos de la Universidad, apoyando a la mejora de los procesos de aprendizaje, investigación, docencia y formación continua difundiendo de esta manera el conocimiento generado por la misma y contribuyendo de forma activa al progreso social, asegurando así un servicio de excelencia a la comunidad universitaria y a la sociedad guatemalteca.
-              </p>
+              </p> <br>
               <h2>Visión</h2>
               <p>
                 El Sistema de Bibliotecas de la Universidad Mariano Gálvez de Guatemala, está orientado a la prestación de servicios de calidad con capacidades y competencias para poner a disposición de toda la comunidad universitaria los recursos de información en un entorno caracterizado por la globalización, trabajado en formatos digitales y recursos electrónicos disponibles a través de las redes de comunicación, para la generación y transmisión del conocimiento, ser el eje principal de las actividades académicas e investigativas de la Universidad, sujeto a la evaluación permanente, a través de estándares internacionales de calidad.
-              </p>
+              </p><br>
               <h2>Valores</h2>
               <p>
                 Nuestros valores constituyen un elemento para el logro de las competencias en el Proceso de Enseñanza-Aprendizaje en el entorno educativo de la Universidad Mariano Gálvez de Guatemala:
@@ -821,7 +821,7 @@
                     <li><b>Comunicación:</b> Eficiencia del trabajo en equipo y por ende la cooperación entre los servidores y usuarios de la Biblioteca, fomentando así los talentos y las aspiraciones individuales.</li>
                     <li><b>Mejora Continua:</b> Tener un espíritu de innovación y creatividad, con capacidades de aprendizaje y adaptación al cambio, aplicando Nuevas Tecnologías de la Información en pro de la mejora continua.</li>
                 </ul>
-              </p>
+              </p><br>
               <h2>Servicios</h2>
               <ul>
                     <li>
@@ -890,7 +890,7 @@
                       <h2>Tesarios UMG</h2>
                         <p>Las tesis de los egresados de la Universidad Mariano Gálvez están a disposición de los usuarios en forma física y digital. Las pueden consultar en todas las especialidades que ofrece la Universidad y pueden acceder a ellas por medio del catálogo en línea, a texto completo, en formato PDF:</p>
                         <p><a target="_blank" href="https://glifos.umg.edu.gt/library/index.php/Especial:GSMSearchPage">Consulte nuestro catálogo en línea</a></p>
-                        <table border="1" cellspacing="0" cellpadding="3" align="center">
+                        <table  class="table table-striped">
                             <tbody>
                             <tr style="text-align: left;">
                             <th>T1 UMG-ADM</th>
