--- a/calendario-academico.html
+++ b/calendario-academico.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Calendario Académico</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -799,7 +799,7 @@
               También puedes consultar, el calendario de Arquitectura, Ciencias Médicas (Nutrición, Fisioterapia, Veterinaria, Enfermería), Odontología, Traducción Español-Inglés, Gestión Pública.
               Calendario General</p>
               <p><b>Planes:</b> Diario, Fin de Semana, Mixto y Domingo. Campus Central y Centros Universitarios. Pregrado en General y Doctorados.</p>
-              <table>
+              <table class="table table-striped">
                     <tbody>
                     <thead>
                       <tr>
@@ -912,7 +912,7 @@
                     </tr>
 
                     <tr>
-                      <td>Evaluaciones de recuperación segundo semestr
+                      <td>Evaluaciones de recuperación segundo semestre
                   </td>
                       <td>NOV 20-26</td>
                     </tr>
