--- a/campus-central.html
+++ b/campus-central.html
@@ -769,8 +769,8 @@
               <div class="row">
                 <div class="col-6 contacto_info" style="border-right: 1px solid #2c557d;">
                   <h4>Campus Central</h4>
-                  <p>3a. Avenida 9-00 Zona 2 Interior Finca el Zapote, Ciudad de Guatemala, Guatemala.<br> PBX:  PBX: (502) 2411-1800.
-                    <br><br> <a href="mailto:info@umg.edu.gt@umg.edu.gt">info@umg.edu.gt@umg.edu.gt</a>
+                  <p>3a. Avenida 9-00 zona 2, Interior Finca el Zapote, Ciudad de Guatemala, Guatemala.<br> PBX:  PBX: (502) 2411-1800.
+                    <br><br> <a href="mailto:info@umg.edu.gt">info@umg.edu.gt</a>
                   </p>
                   <br><p><strong>Horarios:</strong> Lunes a viernes de 07:00 a 21:00 horas.<br>
                     Sábado de 06:00 a 17:00 horas.<br>
@@ -818,14 +818,14 @@
                     <a href="/licenciatura/humanidades/pedagogia_con_especializacion">
                       Pedagogía con Especialización</a>
                   </li>
-                  <li>
+                 <!-- <li>
                     <a href="/licenciatura/humanidades/pedagogia_y_ciencias_de_la_educacion">
                       Pedagogía y Ciencias de la Educación</a>
-                  </li>
+                  </li> 
                   <li>
                     <a href="/licenciatura/humanidades/pedagogia_y_administracion_educativo">
                       Pedagogía y Administración Educativa</a>
-                  </li>
+                  </li> -->
                   <li>
                     <a href="/licenciatura/humanidades/educacion_primaria_y_preprimaria">
                       Educación Primaria y Pre-primaria</a>
