--- a/decalogo-institucional.html
+++ b/decalogo-institucional.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Decálogo Institucional</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -788,40 +788,45 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
-              </h1><br>
+                Decálogo <b>Institucional</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
-              </p>
-              <p>
-                  Se solicitarán los siguientes datos:
-              </p>
+             <br>
               <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
-              <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
-              </p>
+                        <p>
+                          1.- La Universidad Mariano Gálvez de Guatemala, reconoce la trascendental importancia de los supremos valores del Cristianismo en la vida del hombre y de la sociedad, los practica y los irradia.
+                        </p><br>
+                        <p>
+                          2.- La Universidad Mariano Gálvez de Guatemala, reconoce que todos los hombres por el hecho de serlo y ser un fin en sí mismo, tienen el derecho a obtener el nivel más alto de educación que permitan sus condiciones naturales, sin discriminación de sexo, raza, religión, ideología, condición social o económica.
+                        </p><br>
+                        <p>
+                          3.- La Universidad Mariano Gálvez de Guatemala, orienta sus acciones académicas a la formación de profesionales, investigadores y técnicos "científicamente competentes", "éticamente responsables" y "abiertos socialmente a una mentalidad justa y progresista", mediante el desarrollo integrado de la docencia, la investigación y el servicio a la comunidad y de acuerdo a las necesidades del desarrollo y transformación del país.
+                        </p><br>
+                        <p>
+                          4.- La Universidad Mariano Gálvez de Guatemala, propende a la afirmación de los valores nacionales, a fin de consolidar la identidad nacional.
+                        </p><br>
+                        <p>
+                          5.- La Universidad Mariano Gálvez de Guatemala, tiene autonomía en el orden normativo, académico, administrativo, disciplinario y económico, entendida dicha autonomía, como el derecho que tiene la Universidad de tomar y ejecutar sus propias decisiones en todo lo concerniente a la realización de sus fines.
+                        </p><br>
+                        <p>
+                          6.- La Universidad Mariano Gálvez de Guatemala, garantiza, la libertad de cátedra para impartir, enseñar y aprender, sin más finalidad ni otros motivos que la búsqueda y transmisión de la verdad por el bien de la verdad misma. Este derecho sólo podrá ejercitarse para fines estrictamente académicos.
+                        </p><br>
+                        <p>
+                          7.- La Universidad Mariano Gálvez de Guatemala, está desligada de toda actividad política partidista, nacional o internacional.
+                        </p><br>
+                        <p>
+                          8.- La Universidad Mariano Gálvez de Guatemala, reconoce el derecho de los estudiantes a organizarse libremente en asociaciones, siempre y cuando lo hagan con el propósito de realizar actividades culturales, sociales o deportivas, Sus estatutos serán aprobados por el Consejo Directivo.
+                        </p><br>
+                        <p>
+                          9.- El régimen jurídico de la Universidad Mariano Gálvez de Guatemala, está determinado por las bases constitucionales legales que garantizan su existencia, sus Estatutos, los convenios válidamente celebrados por ella y sus reglamentos, en orden normativo tal, que las bases legales inferiores no pueden alterar ni modificar el contenido y espíritu de las normas superiores; y, así mismo, toda modificación o alteración de las normas superiores emanadas válidamente de los órganos de gobierno de la Universidad, supondrá la correspondiente modificación o alteración de las inferiores.
+                        </p><br>
+                        <p>
+                          10.- La Universidad Mariano Gálvez de Guatemala, sin menoscabo de su autonomía, forma parte del Sistema Nacional de Educación, por lo que aúna sus esfuerzos académicos a los desarrollados por las otras Universidades del país, para la consecución de los objetivos comunes y convive con ellas en un ambiente de confraternidad y respeto mutuo.
+                        </p>
+                    </ul>
         </div>
       </article>
 
