--- a/equiparaciones.html
+++ b/equiparaciones.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>tpl: Single</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Equiparaciones</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -789,25 +789,25 @@
             <div class="col-12">
               <h1 class="display-1 lh-1">
                 <b>Equiparaciones</b>
-              </h1>
+              </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p class="text-body mt-2">
+              <p>
                 La gestión de equiparar cursos se requiere cuando el alumno cambia de carrera, jornada o bien de pensum.
               </p>
-              <h2 class="display-4 lh-1">
-                Facilita la asignación de cursos del próximo semestre, sin repetir los que han sido ganados.
-              </h2>
-              <br>
               <p>
-                <b>Pasos:</b><br>
+                Facilita la asignación de cursos del próximo semestre, sin repetir los que han sido ganados.
+              </p>
+           
+              <p>
+                <b>Pasos:</b>
               </p>
               <ul>
-                <li>Debes ingresar a MiUMG con tus datos proporcionados por la Universidad.
+                <li>Debes ingresar a <a href="https://apps.umg.edu.gt" target="_blank">MiUMG</a> con tus datos proporcionados por la Universidad.
 Cuando ingreses, debes buscar el módulo de "Efectuar pagos y generar formularios" y busca la opción de “Equiparaciones”, completa el formulario y sigue las indicaciones.</li>
-                <li>Luego de efectuar el pago, puedes completar este formulario de solicitud de equiparaciones.
+                <li>Luego de efectuar el pago, puedes completar este <a href="https://drive.google.com/file/d/1QvnvVjJJ1KqW6dwDC-UzJjpO1q3s4QCX/view?usp=sharing">formulario de solicitud de equiparaciones</a>.
                 </li>
               </ul>
               
