--- a/facultadOdontologia.html
+++ b/facultadOdontologia.html
@@ -673,15 +673,15 @@
           <div class="position-relative caja-eventos">
             <div class="col-2 txt-fechas">
               <h5 class="tittle-sede">Centros Universitarios </h5>
-              <span class="bloque mm"> SEPTIEMBRE</span>
-              <span class="bloque dd"> 25</span>
-              <span class="bloque hh"> 08:00 horas</span>
+              <span class="bloque mm"> Noviembre</span>
+              <span class="bloque dd"> 14-15</span>
+              <span class="bloque hh"> 07:00 a 14:00 horas</span>
             </div>
             <div class="col-2 txt-fechas2">    
                 <h5 class="tittle-campus">Campus Central </h5>
-                <span class="bloque mm"> SEPTIEMBRE</span>
-                <span class="bloque dd"> 26</span>
-                <span class="bloque hh"> 09:00 horas</span>
+                <span class="bloque mm"> Noviembre</span>
+                <span class="bloque dd"> 13-14</span>
+                <span class="bloque hh"> 07:00 a 14:00 horas</span>
             </div>
           </div>
         </div>
