--- a/fraternidad-de-egresados.html
+++ b/fraternidad-de-egresados.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Fraternidad de Egresados</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -788,40 +788,70 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
+                Fraternidad de<b> Egresados</b>
               </h1><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
-              </p>
-              <p>
-                  Se solicitarán los siguientes datos:
-              </p>
-              <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
-              <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
-              </p>
+            
+
+                <h2>Misión</h2>
+
+                <p>Conservar, en lo posible, una estrecha relación con los ex alumnos de los distintos años y diversas carreras que se imparten en la Universidad, con el propósito que continúen fortaleciendo sus competencias académicas por medio de programas de actualización, talleres, cursos, diplomados y otras actividades promovidas  y organizadas por la Dirección en conjunto con las distintas facultades y escuelas, así como consolidar a cada uno de ellos el sentido de pertenencia con su Alma Mater.</p><br>
+
+                <h2>Visión</h2>
+
+                <p>Coordinar y fortalecer la integración de los egresados con la Dirección y servirles como vínculo con su Universidad a través de un fortalecimiento académico, espiritual y cultural. Asimismo, ser un en lace entre los graduados y empleadores, a través de la bolsa de empleo con la finalidad que puedan optar a diversas oportunidades laborales.</p><br>
+
+                <h2>Servicios</h2>
+                <p>
+                    Universidad Mariano Gálvez de Guatemala pone a disposición de sus egresados los siguientes servicios:
+                </p>
+                <ol>
+                    <li>
+                        Prueba de Paternidad (IQ2QB3) *
+                    </li>
+                    <li>
+                        Prueba de Virus de Papiloma Humano (IQ2QB3) *
+                    </li>
+                    <li>
+                        Clínicas Dentales *
+                    </li>
+                    <li>
+                        Canchas de Fútbol Sala y Fútbol 11.
+                    </li>
+                    <li>
+                        Biblioteca
+                    </li>
+                    <li>
+                        Consejería y Atención Espiritual (Capellanía)
+                    </li>
+                    <li>
+                        Bufete Popular
+                    </li>
+                    <li>
+                        Bolsa de empleo
+                    </li>
+                </ol>
+                <p>
+                  <small>(*) Estos servicios tienen un costo.</small>
+                </p>
+                <br>
+                <h3>Contacto</h3>
+
+                <p>
+                        <strong>Oficina de Egresados</strong><br>
+                        Edificio A, tercer Nivel, Oficina 350 <br>
+                        Teléfono directo: 22545250<br>
+                        <a href="mailto:egresados@umg.edu.gt">egresados@umg.edu.gt</a><br>
+                                                   </p>
+                    <p>
+                        <strong>Horario de atención:</strong> <br>
+                        Lunes a Viernes de 09:00 a 17:00 hrs.<br>
+                        Sábado de 08:00 a 12:00hrs.
+                    </p>
+                    
         </div>
       </article>
 
