--- a/normas-institucionales.html
+++ b/normas-institucionales.html
@@ -9,14 +9,14 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>tpl: Single</title>
   </head>
   <body class="single">
     <header class="visible">
       <nav class="navbar fixed-top mt-0 p-0 bg-transparent mt-lg-1 navbar-expand-xl mt-xl-2">
         <div class="container-fluid position-relative mt-2 px-2 container-xl position-unset-xl px-xl-0">
           <a href="#" class="navbar-brand m-0 p-0">
-            <img src="img/Umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
+            <img src="img/umg.png" alt="Imagotipo de Universidad Mariano Gálvez de Guatemala">
           </a>
           <div id="navbar_Umg" class="navbar-collapse collapse position-absolute position-inherit-xl p-lg-0">
             <ul class="navbar-nav navbar-nav-scroll overflow-x-hidden pt-6 px-0 pt-lg-7 p-xl-0 ps-xl-2" style="--bs-scroll-height: 90svh;">
@@ -788,40 +788,21 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
-              </h1><br>
+                Normas <b>Institucionales</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
-              </p>
-              <p>
-                  Se solicitarán los siguientes datos:
-              </p>
-              <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
-              <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
-              </p>
+
+
+             <div class="list-group">
+              <a href="https://umg.edu.gt/docs/acerca-de/Normas_Disciplinarias_UMG.pdf" target="_blank" class="list-group-item list-group-item-action">
+              Normas Disciplinarias</a>
+              <a href="https://umg.edu.gt/docs/acerca-de/Normas_Academicas_UMG.pdf" target="_blank" class="list-group-item list-group-item-action">Normas Académicas</a>
+              <a href="https://umg.edu.gt/docs/acerca-de/Normas_Financieras_UMG.pdf" target="_blank" class="list-group-item list-group-item-action">
+              Normas Financieras</a>
+            </div>
         </div>
       </article>
 
