--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Nosotros</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -788,40 +788,42 @@
           <div class="row">
             <div class="col-12">
               <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
-              </h1><br>
+                <b>Nosotros</b>
+              </h1>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
               <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
+                <b>Universidad Mariano Gálvez de Guatemala</b>, es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, aprobada el 29 de enero de 1966 por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
+              </p><br>
+              <h2>Orígenes y Filosodía</h2>
+              <p>
+                La Universidad Mariano Gálvez , es una institución de educación superior, privada, independiente, no lucrativa, que funciona de acuerdo con las leyes propias de su naturaleza institucional, que fue aprobada el 29 de Enero de 1966, por el Consejo Supremo Universitario de la Universidad de San Carlos de Guatemala.
               </p>
               <p>
-                  Se solicitarán los siguientes datos:
-              </p>
-              <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
+                Su nombre hace honor al eximio estadista, prócer y preclaro jurisconsulto Doctor José Mariano Gálvez (Jefe del Estado de Guatemala 1831-1838), fundador de la Academia de Estudios y reformador de la educación guatemalteca, quien promovió importantes innovaciones en todos los órdenes de la vida del Estado. Se le atribuye el mejoramiento de la instrucción pública. Luchó por que la enseñanza fuera laica, fue fundador de la Biblioteca y Museo Nacional, respetó las leyes y garantías individuales, libertad de prensa y emisión del pensamiento.
+              </p><br>
               <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
+                De acuerdo con sus principios Institucionales, la Universidad Mariano Gálvez atiende, esencialmente, a la formación ética, científica, profesional y técnica de los estudiantes, mediante el ejercicio integrado de la docencia, la investigación y el servicio a la comunidad e independencia normativa, académica, administrativa, disciplinaria y económica; a la conservación y desarrollo de la ciencia y de la cultura como patrimonio universal; al fomento de la investigación como fuente de conocimiento y de progreso y al estudio de los problemas nacionales con el objeto de contribuir a su solución.
               </p>
+              <p>Los ideales que inspiraron a sus fundadores se mantienen vigentes, pues es preocupación de la Universidad en su que hacer docente, la formación integral de sus estudiantes en un ambiente de libertad, respeto mutuo y espíritu de convivencia.
+              </p><br>
+              <h1>Misión</h1>
+              <p>
+                Formar, en niveles de excelencia académica y de acuerdo con las necesidades y demandas de la sociedad, profesionales, investigadores, técnicos y docentes científicamente competentes, éticamente responsables y socialmente abiertos al cambio progresista, mediante el desarrollo integrado de la docencia, la investigación y el servicio a la comunidad, a fin que ésta tenga la oportunidad de participar de los beneficios de la ciencia, la tecnología y la cultura.
+              </p>
+              <p>
+                Asimismo, que sus graduados sean capaces de conservar, acrecentar y difundir la cultura universal, afirmando los valores propios e inmersos en el proceso productivo del país, y que contribuyan con espíritu crítico a la solución de los problemas nacionales.
+              </p><br>
+              <h1>Visión</h1>
+              <p>
+                Ser una institución de educación superior altamente competitiva, líder en su género, innovadora y creadora de conocimientos científicos y tecnológicos, en la que sus educandos alcancen una formación integral, armónica y potencien sus aptitudes y capacidades, en un ambiente de libertad y aceptación de los supremos valores del cristianismo.
+              </p>
+              <p>Y que sus egresados, sean capaces de asumir los desafíos del mundo contemporáneo y de una sociedad cambiante, comprometidos con el desarrollo económico, social, político y cultural del país, en permanente interacción con el entorno nacional, con renovada vocación de servicio y espíritu de solidaridad.
+              </p>
+            </div>
+          </div>
         </div>
       </article>
 
