--- a/historia-umg.html
+++ b/historia-umg.html
@@ -9,7 +9,7 @@
     <link href="css/_tpl/single.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
 
-    <title>Universidad Mariano Gálvez de Guatemala: Certificación de Cursos</title>
+    <title>Universidad Mariano Gálvez de Guatemala: Historia</title>
   </head>
   <body class="single">
     <header class="visible">
@@ -787,41 +787,39 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h1 class="display-1 lh-1">
-                <b>Certificación</b> de cursos
-              </h1><br>
+              <h1 class="display-1 lh-1" style="text-align: left;">
+                Historia de <b>Universidad Mariano Gálvez de Guatemala</b>
+              </h1><br><br>
             </div>
           </div>
           <div class="row">
             <div class="col-12 fs-sm-5 text-secondary">
-              <p>
-                Realizar solicitud y pago por medio de tarjeta de crédito o débito.<br>
-                Ingresar al siguiente enlace: <a target="_blank" href="https://www.umg.edu.gt/pagos/">https://www.umg.edu.gt/pagos/</a>
-              </p>
-              <p>
-                  Se solicitarán los siguientes datos:
-              </p>
-              <ul>
-                <li>Número de carné: ingrese el número de carné de la carrera de la que solicitará la certificación de cursos.</li>
-                <li>Tipo de pago: seleccione el código de operación <b>“411- Certificación de cursos”</b>.</li>
-                <li>Costo: Q50.00 más el costo del envío.</li>
-                <li>Contraseña de certificación:
-                  <ul>
-                    <li>Este campo se utilizará únicamente si realizó el pago de certificación por otros medios (banca en línea), solicite la habilitación de la contraseña de certificación para cancelar el costo del envío al 2411 1800 extensión 1384 o 1131</li>
-                  </ul>
-                  </li>
-                <li>Carrera
-                  <ul>
-                    <li>Si tiene cursos aprobados en otra carrera aparecerá el siguiente campo, el cual deberá utilizar únicamente para solicitar certificación para gestión de equiparación, seleccionando el código de la carrera de la que solicitará equiparación.<br>
-                    Si no solicitará certificación para gestión de equiparación deje el campo en blanco.</li>
-                  </ul>
-                </li>
-                <li>Semestre/trimestre: seleccione el semestre actual (1-2022 enero-junio o 2-2022 julio-diciembre).</li>
-                <li>Mes: seleccione el mes actual.</li>
-              </ul>
-              <p>
-                Click en el botón <b>“Generar boleta”</b>. El sistema le solicitará la información necesaria para realizar el pago y la dirección de envío.
-              </p>
+
+               <center> <div class="img_description">
+                <img src="https://umg.edu.gt/assets/img/umg_fundadores.jpg"><br>De izquierda a derecha: Lic. Rolando Torres Moss, <em>Dr. Alfredo San José, Lic. Adalberto Santizo Román,<br> Lic. Hugo Morales y Morales y Lic. Bernardo Cárdenas Figueroa.</em>
+                </div></center><br><br>
+
+                <p>El primer ciclo académico se inició el <strong>2 de marzo de 1966</strong> en acto solemne en el que el Rector de la Universidad de San Carlos de Guatemala, pronunció el discurso de salutación y el primer Rector de la naciente Universidad pronunció el discurso de inauguración.</p>
+
+                <p><strong>En 1968</strong>, la Universidad Mariano Gálvez abrió las carreras de Derecho, Economía, Ingeniería Civil, Administración de Empresas, Teología y Humanidades. Posteriormente se abrieron carreras cortas en Pedagogía y Artes Plásticas, Gerencia, Economía Aduanera y Visita Médica.</p>
+
+                <p>Previendo el desarrollo socio económico del país, la Universidad se propone a formar profesionales que se requieran en el campo de los recursos humanos, de ahí que la formación de los cuadros intermedios es la preocupación del futuro, tanto para la Agricultura, la Industria, como para otros servicios.</p><br>
+
+                <center><div class="img_description">
+                <img src="https://umg.edu.gt/assets/img/umg_primer_edificio.jpg"><br><em>Primer edificio en la 7ª Avenida "A" 6-70, zona 2. - Año 1966.</em>
+                </div></center><br><br>
+
+                <p>Una de las primeras ubicaciones físicas de la Universidad Doctor Mariano Gálvez de Guatemala estuvo en 7ª. Av. "A" 6-70, Zona 02, el teléfono fue: 80-8-46, era un área residencial de quietud, de fácil acceso, con los servicios más indispensables a inmediaciones del edificio, así como centros de recreación. El edificio que actualmente ocupó la Universidad tuvo una extensión total de 5,000 metros cuadrados.</p>
+
+                <p>En 1972 la Universidad inició su traslado al Campus Central actual, donde ha desarrollado una infraestructura física que incluye complejos para Observatorio, Biblioteca, un Teatro al aire libre, jardines, un bosque ecológico, un centro de cómputo e instalaciones deportivas.</p><br>
+
+
+                <h2>Actualidad</h2>
+
+                <p>La Universidad Mariano Gálvez de Guatemala, actualmente cuenta con 13 facultades, 147 carreras universitarias en diferentes grados académicos, 5 carreras acreditadas internacionalmente, 3 laboratorios de última generación en las áreas de investigación e innovación (<a href="https://cite.umg.edu.gt">CITE</a>, <a href="https://i2qb3.umg.edu.gt">I2QB3</a>, <a href="https://in3.umg.edu.gt">In3</a>), 20 laboratorios de cómputo, 5 Campus Universitarios (<a href="/cu/campus-central.html">Campus Central</a>, <a href="/cu/jutiapa.html">Jutiapa</a>, <a href="/cu/huehuetenango.html">Huehuetenango</a>, <a href="/cu/quetzaltenango.html">Quetzaltenango</a>, <a href="/cu/villa-nueva.html">Villa Nueva</a> y próximamente Antigua Guatemala), además de <a href="/cu/cu.html">36 Centros Universitarios</a> en todo el país.</p><br>
+
+                <center><img src="https://umg.edu.gt/assets/img/umg_cite.jpg" class="img_normal"><br><a href="https://cite.umg.edu.gt" target="_blank">CITE</a> (Centro de Innovación Tecnologíca y Educativa- Año 2016) Campus Central. </center>
+              
         </div>
       </article>
 
